--- a/main-css.css
+++ b/main-css.css
@@ -5,3 +5,35 @@
 body {
     margin: 0 0 0 0;
 }
+
+#canvas {
+    margin: 0 0 0 0; 
+    position: fixed;
+    width: 100%;
+}
+
+#navigation {
+    margin: 0 0 0 0;
+    height: 100%;
+    width: 10%;
+    position: fixed;
+    z-index: 10;
+    background-color: white;
+}
+
+#navigation ul li {
+    width: 100%;
+    padding: 70% 0% 10% 0%;
+    /*background-color: aqua;*/
+    text-align: right;
+    font-size: 130%;
+    font-family: fantasy;
+    list-style-type: none;
+}
+
+#navigation ul li a {
+    text-decoration: none;
+    padding-right: 10%;
+    color: black;
+    
+}
