--- a/main-css.css
+++ b/main-css.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0 0 0 0;
+    
 }
 
 #canvas {
@@ -21,19 +22,42 @@ body {
     background-color: white;
 }
 
-#navigation ul li {
+#navigation ul li { /*The button which the user presses in the menu*/
     width: 100%;
-    padding: 70% 0% 10% 0%;
-    /*background-color: aqua;*/
-    text-align: right;
+    border: 0px solid red;
+    /* Top right bottom left*/
+    padding: 15% 0% 15% 0%;
+    margin: 50% 0% 0% 0%;
+    background-color: aqua;
+    text-align: left;
     font-size: 130%;
     font-family: fantasy;
     list-style-type: none;
 }
 
+#navigation ul li:hover {
+    cursor: pointer;
+}
+
+#navigation ul li:active {
+    cursor: pointer;
+    
+}
+
 #navigation ul li a {
     text-decoration: none;
-    padding-right: 10%;
     color: black;
+    padding-left: 10%;
     
+}
+
+#guide {
+    border: 0px solid red;
+    position: absolute;
+    width: 20%;
+    height 30%;
+    padding: 15% 0% 15% 0%;
+    background-color: rgba(254, 6, 6, 0.7);
+    box-shadow: 0em 0.1em 0.5em red;
+    z-index: 11;
 }
