--- a/main-css.css
+++ b/main-css.css
@@ -28,7 +28,7 @@ body {
     /* Top right bottom left*/
     padding: 15% 0% 15% 0%;
     margin: 50% 0% 0% 0%;
-    background-color: aqua;
+    /*background-color: aqua;*/
     text-align: left;
     font-size: 130%;
     font-family: fantasy;
@@ -55,8 +55,8 @@ body {
     border: 0px solid red;
     position: absolute;
     width: 20%;
-    height 30%;
-    padding: 15% 0% 15% 0%;
+    height 100%;
+    padding: 20% 0% 15% 0%;
     background-color: rgba(254, 6, 6, 0.7);
     box-shadow: 0em 0.1em 0.5em red;
     z-index: 11;
