--- a/main-css.css
+++ b/main-css.css
@@ -13,6 +13,8 @@ body {
     width: 100%;
 }
 
+/*Content related to the greeting*/
+
 #navigation {
     margin: 0 0 0 0;
     height: 100%;
@@ -60,4 +62,33 @@ body {
     background-color: rgba(254, 6, 6, 0.7);
     box-shadow: 0em 0.1em 0.5em red;
     z-index: 11;
+}
+
+/*Content related to the greeting*/
+
+#greeting { /*golden ration 1.618*/
+    border: 0px solid white;
+    position: absolute;
+    width: 30%;
+    height: 18.5%;
+    margin:15% 0% 0% 40%;
+    background-color: rgba(255, 255, 255, 0.95);
+    box-shadow: 0em 0.1em 0.5em white;
+    z-index: 12;
+    text-align: center;
+}
+
+#greeting-message {
+    font-family: monospace;
+    font-size: 1.6em;
+    padding: 0% 5% 0% 5%;
+    text-align: left;
+}
+
+.spec-heading {
+    font-family: monospace;
+    color: rgba(254, 6, 6, 0.7);
+    text-align: center;
+    font-size: 5em;
+    padding: 0% 5% 0% 5%;
 }
