--- a/main-css.css
+++ b/main-css.css
@@ -69,8 +69,7 @@ body {
 #greeting { /*golden ration 1.618*/
     border: 0px solid white;
     position: absolute;
-    width: 30%;
-    height: 18.5%;
+    width: 40em;
     margin:15% 0% 0% 40%;
     background-color: rgba(255, 255, 255, 0.95);
     box-shadow: 0em 0.1em 0.5em white;
@@ -80,7 +79,7 @@ body {
 
 #greeting-message {
     font-family: monospace;
-    font-size: 1.6em;
+    font-size: 1em;
     padding: 0% 5% 0% 5%;
     text-align: left;
 }
